src/main/java/org/example/lsp/correct/SavingAccount.java
package org.example.lsp.correct;

public class SavingAccount implements IWithDrawableAccount {
    @Override
    public void deposit(Double amount) {
        // TODO
    }

    @Override
    public void withDraw(Double amount) {
        // TODO
    }
}
